fixed pre element text wrapping in FF

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -97,6 +97,7 @@ li li {
 
 pre {
   word-wrap: break-word;
+  white-space: pre-wrap;
   background: $color-gray-95-blue;
   padding: $baseline-height / 2;
 }
